# stg_thing

./: .gitignore  .gitmodules  CMakeLists.txt  board.clip  description.txt
include/: Config.hpp  ConfigCtrl.hpp  GameCore.hpp  GameState.hpp  GameWindow.hpp  InputDevice.hpp  List.hpp  PersistentBuffer.hpp  PkgManager.hpp  Scene.hpp  SceneGameMain.hpp  SceneMain.hpp  ScenePKGSelect.hpp  SceneTitle.hpp  Sprite.hpp  SpriteManager.hpp  TextureManager.hpp
include/XASM2/: Command.hpp  VM.hpp
res/: level0.json  system.json
res/.brt_cache/: downloaded.json  packages.json
res/DAT/: T&L2D.frag  T&L2D.vert  Transform3D.frag  Transform3D.vert
res/pkgs/: test.xasm2  text.xasm2
res/src/: baretto_title.clip  pkg_select.clip  ui.clip
src/: ConfigCtrl.cpp  GameCore.cpp  GameState.cpp  GameWindow.cpp  InputDevice.cpp  Main.cpp  PersistentBuffer.cpp  PkgManager.cpp  SceneGameMain.cpp  SceneMain.cpp  ScenePKGSelect.cpp  SceneTitle.cpp  Sprite.cpp  SpriteManager.cpp  TextureManager.cpp
src/XASM2/: vm.cpp
xasm2/: comp_main.cpp  xasm2_cmd.hpp
